# cpp_ray_tracer

./: AGeometry.cu  AGeometry.cuh  CMakeLists.txt  Camera.cu  Camera.cuh  CheckerStructSize.hpp  CudaAppData.cu  CudaAppData.cuh  CudaGeometryCollection.cuh  CudaInitStruct.h  CudaRendering.cu  CudaRendering.cuh  CudaSceneComponents.cuh  Cylinder.cu  Cylinder.cuh  GeometryCounter.cpp  GeometryCounter.h  Light.cuh  Matrix.cu  Matrix.cuh  Plane.cu  Plane.cuh  Ray.cu  Ray.cuh  Sphere.cu  Sphere.cuh  Square.cu  Square.cuh  TestCuda.cu  TimeLogger.cpp  TimeLogger.h  Triangle.cu  Triangle.cuh  Vector.cuh  config_rt.txt  continuousGeometryGenerator.cpp  continuousGeometryGenerator.h  cuIntersection.cuh  cuPair.cuh  cuPrintf.cu  (+6 more)
include/: AGeomerty.hpp  ALight.hpp  AmbientLight.hpp  ApplicationData.hpp  ApplicationLogic.hpp  Camera.hpp  Cylinder.hpp  FrameBuffer.hpp  LightSource.hpp  Parser.hpp  Plane.hpp  SceneComponents.hpp  Sphere.hpp  Square.hpp  Triangle.hpp  Vector.hpp  color.h  ray.h  vec3.h
include/geometry/: AGeomerty.hpp  Cylinder.hpp  Plane.hpp  Sphere.hpp  Square.hpp  Triangle.hpp
include/math/: Matrix.hpp  math_utils.hpp
src/: AGeomerty.cpp  ApplicationData.cpp  ApplicationLogic.cpp  Camera.cpp  Color.cpp  Cylinder.cpp  LightSource.cpp  Parser.cpp  Sphere.cpp  Square.cpp  main.cpp  ray.cpp  vec3.cpp
src/geometry/: AGeomerty.cpp  Cylinder.cpp  Plane.cpp  Sphere.cpp  Square.cpp  Triangle.cpp
src/math/: Matrix.cpp  math_utils.cpp
